fixtures/errors/for_of_bad_lhs.js
for ([x] of "ab") {
  console.log(x);
}
