fixtures/errors/for_of_bad_lhs.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: undeclared identifier `x`
 --> errors/for_of_bad_lhs.js:1:7
1 | for ([x] of "ab") {
  |       ^

